Fix preview and toolbar overflow

--- a/src-frontend/src/app/app.component.css
+++ b/src-frontend/src/app/app.component.css
@@ -9,6 +9,7 @@
   overflow-y: scroll;
   height: 100%;
   box-sizing: border-box;
+  overflow-x: hidden;
 }
 
 @media screen and (max-width: 220px){
